spec/invalid/empty.expr.diagnostics
[
    Diagnostic {
        severity: Error,
        code: Some(
            "syntax",
        ),
        message: "unexpected end of file; expected: [\"\\\"(\\\"\", \"number\"]",
        labels: [
            Label {
                style: Primary,
                file_id: 0,
                range: 0..0,
                message: "",
            },
        ],
        notes: [],
    },
]